super-heroes/crossplane-aws/deployment-stat.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "quarkus-workshop-stat"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-stat"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "quarkus-workshop-stat"
      version: "01"
      group: "super-heroes"
  template:
    metadata:
      labels:
        app: "quarkus-workshop-stat"
        version: "01"
        group: "super-heroes"
    spec:
      containers:
      - image: "esara/quarkus-workshop-statistic"
        imagePullPolicy: "IfNotPresent"
        name: "quarkus-workshop-stat"
        ports:
        - containerPort: 8085
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "quarkus-workshop-stat"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-stat"
spec:
  ports:
    - name: "http"
      port: 8085
  selector:
    app: "quarkus-workshop-stat"
    version: "01"
    group: "super-heroes"
  type: "NodePort"
