super-heroes/crossplane-aws/deployment-ui.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "quarkus-workshop-ui"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "quarkus-workshop-ui"
      version: "01"
      group: "super-heroes"
  template:
    metadata:
      labels:
        app: "quarkus-workshop-ui"
        version: "01"
        group: "super-heroes"
    spec:
      containers:
      - image: "esara/quarkus-workshop-ui"
        imagePullPolicy: "IfNotPresent"
        name: "quarkus-workshop-hero"
        ports:
        - containerPort: 8080
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "quarkus-workshop-ui"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-ui"
spec:
  ports:
    - name: "http"
      port: 8080
  selector:
    app: "quarkus-workshop-ui"
    version: "01"
    group: "super-heroes"
  type: "NodePort"
