super-heroes/crossplane-aws/deployment-villain.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "quarkus-workshop-villain"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-villain"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "quarkus-workshop-villain"
      version: "01"
      group: "super-heroes"
  template:
    metadata:
      labels:
        app: "quarkus-workshop-villain"
        version: "01"
        group: "super-heroes"
    spec:
      containers:
      - image: "esara/quarkus-workshop-villain"
        imagePullPolicy: "IfNotPresent"
        name: "quarkus-workshop-villain"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "quarkus-workshop-villain"
    version: "01"
    group: "super-heroes"
  name: "quarkus-workshop-villain"
spec:
  ports:
  - name: "http"
    port: 8080
  selector:
    app: "quarkus-workshop-villain"
    version: "01"
    group: "super-heroes"
  type: "ClusterIP"
